Accounts, Categories, Subcategories, Rules

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,49 @@
+#----------------------------------------
+# Application configuration
+#----------------------------------------
+# Application name
 spring.application.name=money-manager-v2
+# Server port
+server.port=8080
+
+#----------------------------------------
+# Database configuration
+#----------------------------------------
+# Database URL
+spring.datasource.url=jdbc:postgresql://localhost:5432/moneymng
+# Database username
+spring.datasource.username=moneymng
+# Database password
+spring.datasource.password=moneymng
+# Database schema generation
+spring.jpa.hibernate.ddl-auto=create-drop
+# Enable lazy loading
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+#----------------------------------------
+# Configurator configuration
+#----------------------------------------
+# Configurator enabled
+configurator.enabled=true
+# Configurator file path
+configurator.file-path=C:\\Users\\radov\\Downloads\\Configurator.xlsx
+# Account configuration
+configurator.account.sheet-name=Accounts
+configurator.account.name-column=0
+# Category configuration
+configurator.category.sheet-name=Categories
+configurator.category.name-column=1
+# Subcategory configuration
+configurator.subcategory.sheet-name=Categories
+configurator.subcategory.name-column=0
+configurator.subcategory.category-column=1
+# Rule configuration
+configurator.rule.sheet-name=Rules
+configurator.rule.key-column=0
+configurator.rule.type-column=1
+configurator.rule.recipient-column=2
+configurator.rule.note-column=3
+configurator.rule.category-column=4
+configurator.rule.subcategory-column=5
+configurator.rule.label-column=6
+configurator.rule.skip-transaction-column=7
