--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,15 @@ configurator.rule.category-column=4
 configurator.rule.subcategory-column=5
 configurator.rule.label-column=6
 configurator.rule.skip-transaction-column=7
+# Statement setting configuration
+configurator.statement-setting.sheet-name=Imports
+configurator.statement-setting.name-column=0
+configurator.statement-setting.charset-column=1
+configurator.statement-setting.account-column=2
+configurator.statement-setting.date-pattern-column=3
+configurator.statement-setting.skip-lines-column=4
+configurator.statement-setting.date-column=5
+configurator.statement-setting.recipient-column=6
+configurator.statement-setting.note-column=7
+configurator.statement-setting.amount-column=8
+configurator.statement-setting.currency-column=9
