Process Controller and rules applying logic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -56,6 +56,8 @@ configurator.statement-setting.date-pattern-column=3
 configurator.statement-setting.skip-lines-column=4
 configurator.statement-setting.date-column=5
 configurator.statement-setting.recipient-column=6
-configurator.statement-setting.note-column=7
-configurator.statement-setting.amount-column=8
-configurator.statement-setting.currency-column=9
+configurator.statement-setting.account-number-column=7
+configurator.statement-setting.bic-code-column=8
+configurator.statement-setting.note-column=9
+configurator.statement-setting.amount-column=10
+configurator.statement-setting.currency-column=11
