--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <apache.poi.version>5.2.0</apache.poi.version>
         <lombok.version>1.18.32</lombok.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <opencsv.version>5.9</opencsv.version>
     </properties>
     <dependencies>
         <!--        Spring boot dependencies-->
@@ -81,6 +82,13 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
             <version>${apache.poi.version}</version>
+        </dependency>
+
+        <!--		CSV file processing used in CsvUtil-->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
         </dependency>
 
     </dependencies>
